apps/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/component: vaultwarden
  annotations:
    secret.reloader.stakater.com/reload: "vaultwarden-secrets"
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/component: vaultwarden
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/component: vaultwarden
    spec:
      restartPolicy: Always
      containers:
        - name: app
          # image: "docker.io/vaultwarden/server:1.34.3-alpine"
          # image: "ghcr.io/timeshel/oidcwarden:v2025.10.1-1"
          image: "docker.io/vaultwarden/server:testing-alpine"
          imagePullPolicy: IfNotPresent

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              memory: 100Mi
              cpu: 2m
            limits:
              memory: 500Mi

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /data
              name: vaultwarden-data-pvc

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      enableServiceLinks: false
      automountServiceAccountToken: false

  volumeClaimTemplates:
    - metadata:
        name: vaultwarden-data-pvc
      apiVersion: v1
      kind: PersistentVolumeClaim
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
