apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/href: "https://vaultwarden.home.alden.ai"
    gethomepage.dev/description: Rust-based Password Manager
    gethomepage.dev/icon: vaultwarden.svg
    gethomepage.dev/app: vaultwarden # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app.kubernetes.io/name=vaultwarden,
      app.kubernetes.io/component=vaultwarden
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - vaultwarden.home.alden.ai
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 8080
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
