apps/vaultwarden/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - vaultwarden.home.alden.ai
            paths:
              - "/*"
            notPaths:
              - "/api/*"
              - "/identity/*"
              - "/icons/*"
              - "/notifications/hub"
